Fix z-index issue when lightbox is open and diaporama is triggered

--- a/frontend/src/components/lightbox/lightbox.scss
+++ b/frontend/src/components/lightbox/lightbox.scss
@@ -5,7 +5,7 @@
     &-container {
       bottom: 9px;
       right: 50px;
-      z-index: 99999;
+      z-index: 10001;
       position: fixed;
     }
 
