--- a/frontend/src/components/masonry-wall/masonry.scss
+++ b/frontend/src/components/masonry-wall/masonry.scss
@@ -33,8 +33,8 @@
   right: 12px;
   bottom: 12px;
   color: $bdp-grey;
-  z-index: 99999;
-  font-size: 30px;
+  z-index: 10001;
+  font-size: 30px !important;
 
   &--white {
     color: white;
